2003-07-14  Paul Eggert  <eggert@twinsun.com>

	* modules/getdate, modules/posixtm: Depend on mktime.

2003-07-10  Simon Josefsson  <jas@extundo.com>

	* modules/strchrnul (Makefile.am): Add strchrnul.h.

2003-06-26  Bruno Haible  <bruno@clisp.org>

	* modules/human: Depend on module stdbool.

2003-06-25  Bruno Haible  <bruno@clisp.org>

	* modules/readlink: New file.
	* modules/xreadlink: Depend on it.
	* MODULES.html.sh (func_all_modules): Add readlink.

2003-06-22  Bruno Haible  <bruno@clisp.org>

	* modules/safe-read: Add m4/ssize_t.m4.
	* modules/xreadlink: Add m4/ssize_t.m4.

2003-06-11  Simon Josefsson  <jas@extundo.com>

	* modules/sysexits: New file.
	* MODULES.html.sh (func_all_modules): Add sysexits.

2003-06-10  Bruno Haible  <bruno@clisp.org>

	* MODULES.html.sh (func_all_modules): Add strchrnul and argp.

2003-06-10  Simon Josefsson  <jas@extundo.com>

	* modules/strchrnul: New file.

2003-06-10  Simon Josefsson  <jas@extundo.com>

	* modules/argp: New file.

2003-06-07  Bruno Haible  <bruno@clisp.org>

	* modules/poll (Makefile.am): Use explicit creation rule for poll.h, to
	avoid AC_CONFIG_LINKS.
	* modules/fnmatch (Makefile.am): Use explicit creation rule for
	fnmatch.h, to avoid AC_CONFIG_LINKS.
	* modules/alloca (Makefile.am): Make creation of alloca.h Ctrl-C safe.

2003-06-07  Jim Meyering  <jim@meyering.net>

	* modules/strtod: Use $(...) notation, not @...@ for
	AC_REPLACE'd variables.
	* modules/localcharset: Likewise.

2003-06-06  Jim Meyering  <jim@meyering.net>
	    Bruno Haible  <bruno@clisp.org>

	* modules/stdbool: Reflect renaming: stdbool.h.in -> stdbool_.h.
	Adjust Makefile.am snippet not to redirect directly to target.
	Use $(STDBOOL_H) notation, not @STDBOOL_H@ for AC_REPLACE'd variables.

2003-05-30  Bruno Haible  <bruno@clisp.org>

	* modules/gettext: Add files m4/nls.m4 and m4/po.m4.
	* config/config.rpath: Upgrade to gettext-0.12.1.

2003-05-22    <karl@gnu.org>

	* gnulib-tool (func_usage): =LIBRARY not =libRARY in help msg.
