@@ -1,3 +1,7 @@
+2003-07-14  Simon Josefsson  <jas@extundo.com>
+
+	* mempcpy.m4: New file.
+
 2003-07-10  Jim Meyering  <jim@meyering.net>
 
 	* clock_time.m4: Remove trailing blank.
